syntax = "proto3";

option go_package = "pb/game";

enum eNodeType
{
    DeployNodeService   = 0;  // 部署节点服务
    DatabaseNodeService = 1;  // 数据库节点服务
    CentreNodeService   = 2;  // 场景切换中心服务器服务
    SceneNodeService    = 3;  // 场景服务器服务
    GateNodeService     = 4;  // 网关节点服务
    LoginNodeService    = 5;  // 登录服务器节点服务
    RedisNodeService    = 6;   // Redis 节点服务
};


enum eSceneNodeType
{
	kMainSceneNode = 0;//主世界场景
	kRoomNode = 1;//副本场景
	kMainSceneCrossNode = 2;//跨服主世界场景
	kRoomSceneCrossNode = 3;//跨服副本场景
};

// 定义节点协议类型的枚举
enum eNodeProtocolType {
  PROTOCOL_TCP = 0;
  PROTOCOL_HTTP = 1;
  PROTOCOL_GRPC = 2;
}